[package]
name = "y2019"
version = "0.1.0"
authors = ["Michael Gerhaeuser <michael.gerhaeuser@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3      # controls the `--opt-level` the compiler builds with.
                   # 0-1 is good for debugging. 2 is well-optimized. Max is 3.
                   # 's' attempts to reduce size, 'z' reduces size even more.

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
regex = "1"
lazy_static = "1.2"
num = "0.4.0"
rand = "0.8.4"
pathfinding = "3.0.5"
